images with alignment fixed, add manifest, images

--- a/src/css/content.less
+++ b/src/css/content.less
@@ -36,11 +36,21 @@
     padding-left: 38px;
 }
 
+.clear {
+
+    &:after {
+        content: "";
+        display: block;
+        clear: both;
+    }
+}
+
 .header(@margin, @font-size) {
     margin: @margin;
     font-size: @font-size;
     font-family: @bold-font;
     font-weight: normal;
+    .clear;
 }
 
 .cell() {
@@ -58,6 +68,7 @@
 
     p {
         .basic;
+        .clear;
     }
 
     ol, ul {
@@ -67,6 +78,7 @@
         li {
             p, div {
                 display: inline-block;
+                .clear;
             }
         }
     }
@@ -171,19 +183,19 @@
         }
 
         &[style^="float: right"] {
-            margin: 0 0 5px 20px;
+            margin: 10px 0 0 20px;
         }
 
         &[style^="float:right"] {
-            margin: 0 0 5px 20px;
+            margin: 10px 0 0 20px;
         }
 
         &[style^="float: left"] {
-            margin: 0 20px 5px 0;
+            margin: 10px 20px 0 0;
         }
 
         &[style^="float:left"] {
-            margin: 0 20px 5px 0;
+            margin: 10px 20px 0 0;
         }
     }
 
